--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,6 @@
 third-place:
 - name: RIDI
-  role: Digital Product Designer
+  role: Team Manager of UX Design, Digital Product Designer
   date: 2015. JUN - Present
 
 second-place:
