--- a/_data/skill-roles.yml
+++ b/_data/skill-roles.yml
@@ -1,9 +1,9 @@
-- name: Digital Product Design
-- name: UX Design
-- name: Visual Design
-- name: Interaction Design
-- name: Prototyping
-- name: UI Animation
-- name: Illustration
-- name: Wireframing
-- name: Copywriting
+- name: Javascript
+- name: Vue.js
+- name: HTML5
+- name: CSS3
+- name: MySQL
+- name: Oracle
+- name: Linux
+- name: Java
+- name: Hadoop
