commit_8/27_job.font

--- a/_config.yml
+++ b/_config.yml
@@ -25,3 +25,6 @@ author:
 version:        3.4.1
 github:
   repo:         https://github.com/whatamelon/whatamelon.github.io
+
+# Font
+font:                "'SCOREDREAM'" 
