200908_깃블로그 about.md 수정 및 ga 생성

--- a/_data/skill-roles.yml
+++ b/_data/skill-roles.yml
@@ -1,10 +1,6 @@
+- name: Dart
+- name: Flutter
 - name: Javascript
 - name: Vue.js
 - name: Nuxt.js
-- name: HTML5
-- name: CSS3
-- name: MySQL
-- name: Oracle
-- name: Linux
 - name: Java
-- name: Hadoop
