--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink:      /:year-:month-:day/:title
 # Setup
 title:          whatamelon
 baseurl:        ""
-url:            "https://whatamelon.github.io/"
+url:            "https://summerclout.dev"
 
 # Assets
 sass:
@@ -17,7 +17,7 @@ markdown:       kramdown
 # About
 author:
   name:         whatamelon
-  url:          https://whatamelon.github.io/
+  url:          "https://summerclout.dev"
   email:        hsh0617@naver.com
   github:       whatamelon
 
